chore: added sessions endpoint
